Fix mermaid diagram text in dark mode.

--- a/public/_static/site.css
+++ b/public/_static/site.css
@@ -237,6 +237,7 @@ h1, h2, h3, h4, h5, h6, p, pre, ul, dl, ol {
 div.mermaid {
 	margin: 1rem;
 	text-align: center;
+	color: initial; /* Don't inherit page text color */
 }
 
 div.giscus {
